--- a/app/src/main/res/layout/dialog_return_order.xml
+++ b/app/src/main/res/layout/dialog_return_order.xml
@@ -83,7 +83,7 @@
             android:layout_marginEnd="@dimen/dp_16"
             android:layout_marginRight="@dimen/dp_16"
             android:layout_weight="1"
-            android:background="@color/colorBlueTheme"
+            android:background="@drawable/bg_button"
             android:gravity="center"
             android:padding="@dimen/dp_8"
             android:text="@string/cancel"
@@ -96,7 +96,7 @@
             android:layout_marginLeft="@dimen/dp_16"
             android:layout_marginStart="@dimen/dp_16"
             android:layout_weight="1"
-            android:background="@color/colorBlueTheme"
+            android:background="@drawable/bg_button"
             android:gravity="center"
             android:padding="@dimen/dp_8"
             android:text="@string/submit"
