--- a/app/src/main/res/layout/dialog_ask_sign.xml
+++ b/app/src/main/res/layout/dialog_ask_sign.xml
@@ -30,32 +30,28 @@
         android:layout_marginTop="@dimen/dp_16"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_dialog_ask_sign_ensure"
+        <Button
+            android:id="@+id/btn_dialog_ask_sign_ensure"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginEnd="@dimen/dp_16"
             android:layout_marginRight="@dimen/dp_16"
             android:layout_weight="1"
-            android:background="@color/colorBlueTheme"
+            android:background="@drawable/bg_button"
             android:gravity="center"
-            android:paddingBottom="@dimen/dp_16"
-            android:paddingTop="@dimen/dp_16"
             android:text="@string/ensure"/>
 
-        <TextView
-            android:id="@+id/tv_dialog_ask_sign_cancel"
+        <Button
+            android:id="@+id/btn_dialog_ask_sign_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="@dimen/dp_16"
             android:layout_marginStart="@dimen/dp_16"
             android:layout_weight="1"
-            android:background="@color/colorBlueTheme"
+            android:background="@drawable/bg_button"
             android:gravity="center"
-            android:paddingBottom="@dimen/dp_16"
-            android:paddingTop="@dimen/dp_16"
             android:text="@string/cancel"/>
 
     </LinearLayout>
