--- a/app/src/main/res/layout/dialog_message_editable.xml
+++ b/app/src/main/res/layout/dialog_message_editable.xml
@@ -24,13 +24,13 @@
         android:gravity="center"
         android:text="@string/app_name"/>
 
-    <TextView
-        android:id="@+id/tv_dialog_message_cancel"
+    <Button
+        android:id="@+id/btn_dialog_message_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dp_16"
-        android:background="@color/colorBlueTheme"
+        android:background="@drawable/bg_button"
         android:paddingBottom="@dimen/dp_16"
         android:paddingLeft="@dimen/dp_64"
         android:paddingRight="@dimen/dp_64"
