--- a/app/src/main/res/layout/layout_activity_installing_remarks.xml
+++ b/app/src/main/res/layout/layout_activity_installing_remarks.xml
@@ -19,7 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_8"
-        android:gravity="center"
-        android:text="@string/remarks"/>
+        android:gravity="center"/>
 
 </LinearLayout>
