--- a/app/src/main/res/layout/activity_operate_remove.xml
+++ b/app/src/main/res/layout/activity_operate_remove.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.tianyigps.xiepeng.activity.OperateRemoveActivity">
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/lv_activity_operate_remove"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/colorNull"
+        android:dividerHeight="@dimen/dp_16"
+        android:scrollbars="none"/>
+
+</FrameLayout>
