--- a/app/src/main/res/layout/activity_operate_repair.xml
+++ b/app/src/main/res/layout/activity_operate_repair.xml
@@ -1,11 +1,400 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.tianyigps.xiepeng.activity.OperateRepairActivity">
+    android:padding="@dimen/dp_8"
+    android:scrollbars="none"
+    >
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_activity_operate_default_car"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:padding="@dimen/dp_8"
+            android:src="@drawable/ic_car_no"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_car_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/iv_activity_operate_default_car"
+            android:layout_toRightOf="@+id/iv_activity_operate_default_car"
+            android:text="沪X9527"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_frame_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/iv_activity_operate_default_car"
+            android:layout_toEndOf="@+id/iv_activity_operate_default_car"
+            android:layout_toRightOf="@+id/iv_activity_operate_default_car"
+            android:text="LSJW546461FCV89789"/>
+
+        <ImageView
+            android:id="@+id/iv_activity_operate_default_locate"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:padding="@dimen/dp_8"
+            android:src="@drawable/ic_address"/>
+
+        <ImageView
+            android:id="@+id/iv_activity_operate_default_device_type"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/iv_activity_operate_default_car"
+            android:layout_marginTop="@dimen/dp_16"
+            android:padding="@dimen/dp_8"
+            android:src="@drawable/ic_device_no"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_device_type_and_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/iv_activity_operate_default_device_type"
+            android:layout_toEndOf="@+id/iv_activity_operate_default_device_type"
+            android:layout_toRightOf="@+id/iv_activity_operate_default_device_type"
+            android:text="有线（微贷网201703201351）"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_device_t_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/iv_activity_operate_default_device_type"
+            android:layout_toEndOf="@+id/iv_activity_operate_default_device_type"
+            android:layout_toRightOf="@+id/iv_activity_operate_default_device_type"
+            android:text="32154983215647832"/>
+
+        <ImageView
+            android:id="@+id/iv_activity_operate_default_position"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/iv_activity_operate_default_device_type"
+            android:layout_marginTop="@dimen/dp_16"
+            android:padding="@dimen/dp_8"
+            android:src="@drawable/ic_place"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_position_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/iv_activity_operate_default_position"
+            android:layout_toEndOf="@+id/iv_activity_operate_default_position"
+            android:layout_toRightOf="@+id/iv_activity_operate_default_position"
+            android:text="旧安装位置"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/iv_activity_operate_default_position"
+            android:layout_toEndOf="@+id/iv_activity_operate_default_position"
+            android:layout_toRightOf="@+id/iv_activity_operate_default_position"
+            android:lines="1"
+            android:maxWidth="@dimen/dp_240"
+            android:text="驾驶舱仪器内"/>
+
+        <ImageView
+            android:id="@+id/iv_activity_operate_default_position_pic"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_activity_operate_default_position_title"
+            android:src="@drawable/ic_camera"/>
+
+        <RelativeLayout
+            android:id="@+id/rl_activity_operate_default_install"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/iv_activity_operate_default_position"
+            android:layout_marginTop="@dimen/dp_16">
+
+            <ImageView
+                android:id="@+id/iv_activity_operate_default_install"
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:padding="@dimen/dp_8"
+                android:src="@drawable/ic_connection"/>
+
+            <TextView
+                android:id="@+id/tv_activity_operate_default_install"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_40"
+                android:layout_alignTop="@+id/iv_activity_operate_default_install"
+                android:layout_toEndOf="@+id/iv_activity_operate_default_install"
+                android:layout_toRightOf="@+id/iv_activity_operate_default_install"
+                android:gravity="center"
+                android:text="旧接线图"/>
+
+            <ImageView
+                android:id="@+id/iv_activity_operate_default_install_pic"
+                android:layout_width="@dimen/dp_80"
+                android:layout_height="@dimen/dp_40"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/iv_activity_operate_default_install"
+                android:src="@drawable/ic_camera"/>
+        </RelativeLayout>
+
+
+        <View
+            android:id="@+id/view_activity_operate_default_line_1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0_5"
+            android:layout_below="@id/rl_activity_operate_default_install"
+            android:layout_marginTop="@dimen/dp_16"
+            android:background="@color/colorBlueTheme"/>
+
+        <LinearLayout
+            android:id="@+id/ll_activity_operate_default_install"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_activity_operate_default_line_1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_activity_operate_default_worker_title"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_40"
+                android:gravity="center_vertical"
+                android:text="安装人："/>
+
+            <TextView
+                android:id="@+id/tv_activity_operate_default_worker"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp_40"
+                android:layout_weight="1"
+                android:gravity="center_vertical|end"
+                android:text="杨某某"/>
+
+            <TextView
+                android:id="@+id/tv_activity_operate_default_worker_phone"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp_40"
+                android:layout_weight="1"
+                android:gravity="center_vertical|end"
+                android:text="17900000001"/>
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view_activity_operate_default_line_2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0_5"
+            android:layout_below="@id/ll_activity_operate_default_install"
+            android:background="@color/colorBlueTheme"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_fault_describe_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/view_activity_operate_default_line_2"
+            android:layout_marginTop="@dimen/dp_16"
+            android:text="故障描述"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/tv_activity_operate_fault_describe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tv_activity_operate_fault_describe_title"
+            android:padding="@dimen/dp_8"
+            android:text="GPS卫星信号..."
+            />
+
+        <TextView
+            android:id="@+id/tv_activity_operate_remove_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/tv_activity_operate_fault_describe"
+            android:layout_marginBottom="@dimen/dp_16"
+            android:layout_marginEnd="@dimen/dp_16"
+            android:layout_marginRight="@dimen/dp_16"
+            android:layout_marginTop="@dimen/dp_16"
+            android:background="@drawable/bg_button_clickable"
+            android:paddingBottom="@dimen/dp_8"
+            android:paddingLeft="@dimen/dp_16"
+            android:paddingRight="@dimen/dp_16"
+            android:paddingTop="@dimen/dp_8"
+            android:text="维修更换"
+            android:textColor="@color/colorWhite"
+            />
+
+        <ImageView
+            android:id="@+id/iv_activity_operate_default_position_new"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tv_activity_operate_remove_state"
+            android:layout_marginTop="@dimen/dp_16"
+            android:padding="@dimen/dp_8"
+            android:src="@drawable/ic_place"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_position_title_new"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/iv_activity_operate_default_position_new"
+            android:layout_toEndOf="@+id/iv_activity_operate_default_position_new"
+            android:layout_toRightOf="@+id/iv_activity_operate_default_position_new"
+            android:text="安装位置"/>
+
+        <EditText
+            android:id="@+id/et_activity_operate_default_position_new"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/dp_80"
+            android:layout_marginEnd="@dimen/dp_80"
+            android:layout_alignBottom="@+id/iv_activity_operate_default_position_new"
+            android:layout_toEndOf="@+id/iv_activity_operate_default_position_new"
+            android:layout_toRightOf="@+id/iv_activity_operate_default_position_new"
+            android:background="@null"
+            android:hint="请输入安装位置"
+            android:lines="1"
+            android:maxWidth="@dimen/dp_240"
+            android:textSize="@dimen/sp_14"/>
+
+        <ImageView
+            android:id="@+id/iv_activity_operate_default_position_pic_new"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_activity_operate_default_position_title_new"
+            android:src="@drawable/ic_camera"/>
+
+        <View
+            android:id="@+id/view_activity_operate_default_line_3"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0_5"
+            android:layout_below="@+id/iv_activity_operate_default_position_new"
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginStart="@dimen/dp_40"
+            android:layout_marginTop="@dimen/dp_4"
+            android:background="@color/colorBlueTheme"/>
+
+        <RelativeLayout
+            android:id="@+id/rl_activity_operate_default_install_new"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/view_activity_operate_default_line_3"
+            android:layout_marginTop="@dimen/dp_16">
+
+            <ImageView
+                android:id="@+id/iv_activity_operate_default_install_new"
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:padding="@dimen/dp_8"
+                android:src="@drawable/ic_connection"/>
+
+            <TextView
+                android:id="@+id/tv_activity_operate_default_install_new"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_40"
+                android:layout_alignTop="@+id/iv_activity_operate_default_install_new"
+                android:layout_toEndOf="@+id/iv_activity_operate_default_install_new"
+                android:layout_toRightOf="@+id/iv_activity_operate_default_install_new"
+                android:gravity="center"
+                android:text="接线图"/>
+
+            <ImageView
+                android:id="@+id/iv_activity_operate_default_install_pic_new"
+                android:layout_width="@dimen/dp_80"
+                android:layout_height="@dimen/dp_40"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/iv_activity_operate_default_install_new"
+                android:src="@drawable/ic_camera"/>
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_activity_operate_default_line_4"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0_5"
+            android:layout_below="@+id/rl_activity_operate_default_install_new"
+            android:layout_marginTop="@dimen/dp_16"
+            android:background="@color/colorBlueTheme"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_install_explain_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view_activity_operate_default_line_4"
+            android:layout_marginTop="@dimen/dp_16"
+            android:layout_toEndOf="@+id/tv_activity_operate_fault_describe_title"
+            android:layout_toRightOf="@+id/tv_activity_operate_fault_describe_title"
+            android:text="检修说明"/>
+
+        <EditText
+            android:id="@+id/et_activity_operate_default_install_explain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_activity_operate_default_install_explain_title"
+            android:layout_marginTop="@dimen/dp_8"
+            android:background="@drawable/bg_edit"
+            android:gravity="start|top"
+            android:hint="请输入故障说明..."
+            android:maxLength="200"
+            android:minHeight="@dimen/dp_96"
+            android:textSize="@dimen/sp_14"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_install_explain_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/et_activity_operate_default_install_explain"
+            android:layout_marginTop="@dimen/dp_4"
+            android:text="0/200"/>
+
+        <TextView
+            android:id="@+id/tv_activity_operate_default_install_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_activity_operate_default_install_explain_count"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/dp_32"
+            android:layout_marginTop="@dimen/dp_16"
+            android:background="@drawable/bg_button_flush"
+            android:paddingBottom="@dimen/dp_8"
+            android:paddingLeft="@dimen/dp_80"
+            android:paddingRight="@dimen/dp_80"
+            android:paddingTop="@dimen/dp_8"
+            android:text="@string/save"
+            android:textColor="@color/colorWhite"/>
+
+    </RelativeLayout>
+</ScrollView>
