--- a/app/src/main/res/layout/layout_activity_operate_install_head.xml
+++ b/app/src/main/res/layout/layout_activity_operate_install_head.xml
@@ -3,6 +3,8 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:focusable="true"
+              android:focusableInTouchMode="true"
               android:orientation="vertical"
               android:padding="@dimen/dp_8">
 
@@ -37,35 +39,31 @@
                 android:layout_toRightOf="@+id/iv_layout_operate_install_car_no"
                 android:text="@string/car_no"/>
 
-            <TextView
-                android:id="@+id/tv_layout_operate_install_car_no"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/et_layout_operate_install_car_no"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/iv_layout_operate_install_car_no"
+                android:layout_marginEnd="@dimen/dp_80"
+                android:layout_marginRight="@dimen/dp_80"
                 android:layout_toEndOf="@+id/iv_layout_operate_install_car_no"
                 android:layout_toRightOf="@+id/iv_layout_operate_install_car_no"
-                android:text="@string/car_no"/>
+                android:background="@null"
+                android:hint="@string/enter_car_no"
+                android:lines="1"
+                android:maxWidth="@dimen/dp_240"
+                android:textSize="@dimen/sp_14"/>
 
         </RelativeLayout>
 
 
         <ImageView
             android:id="@+id/iv_layout_operate_install_car_pic"
-            android:layout_width="@dimen/dp_96"
-            android:layout_height="@dimen/dp_64"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_40"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@color/colorAccent"/>
-
-        <ImageView
-            android:id="@+id/iv_layout_operate_install_car_camera"
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:padding="@dimen/dp_4"
             android:src="@drawable/ic_camera"/>
 
         <View
@@ -111,35 +109,31 @@
                 android:layout_toRightOf="@+id/iv_layout_operate_install_frame_no"
                 android:text="@string/frame_no"/>
 
-            <TextView
-                android:id="@+id/tv_layout_operate_install_frame_no"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/et_layout_operate_install_frame_no"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/iv_layout_operate_install_frame_no"
+                android:layout_marginEnd="@dimen/dp_80"
+                android:layout_marginRight="@dimen/dp_80"
                 android:layout_toEndOf="@+id/iv_layout_operate_install_frame_no"
                 android:layout_toRightOf="@+id/iv_layout_operate_install_frame_no"
-                android:text="@string/frame_no"/>
+                android:background="@null"
+                android:hint="@string/enter_frame_no"
+                android:lines="1"
+                android:maxWidth="@dimen/dp_240"
+                android:textSize="@dimen/sp_14"/>
 
         </RelativeLayout>
 
 
         <ImageView
             android:id="@+id/iv_layout_operate_install_frame_pic"
-            android:layout_width="@dimen/dp_96"
-            android:layout_height="@dimen/dp_64"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_40"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@color/colorAccent"/>
-
-        <ImageView
-            android:id="@+id/iv_layout_operate_install_frame_camera"
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:padding="@dimen/dp_4"
             android:src="@drawable/ic_camera"/>
 
         <View
@@ -178,14 +172,17 @@
             android:layout_toRightOf="@+id/iv_layout_operate_install_car_type"
             android:text="@string/car_type"/>
 
-        <TextView
-            android:id="@+id/tv_layout_operate_install_car_type"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/et_layout_operate_install_car_type"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/iv_layout_operate_install_car_type"
             android:layout_toEndOf="@+id/iv_layout_operate_install_car_type"
             android:layout_toRightOf="@+id/iv_layout_operate_install_car_type"
-            android:text="@string/car_type"/>
+            android:background="@null"
+            android:hint="@string/car_type"
+            android:lines="1"
+            android:textSize="@dimen/sp_14"/>
 
         <View
             android:layout_width="match_parent"
