--- a/app/src/main/res/layout/layout_order_details_content.xml
+++ b/app/src/main/res/layout/layout_order_details_content.xml
@@ -257,6 +257,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/dp_16"
+                android:background="@drawable/bg_button_flush"
+                android:paddingLeft="@dimen/dp_80"
+                android:paddingRight="@dimen/dp_80"
                 android:text="@string/sign" />
 
             <TextView
